--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reservia - OpenClassrooms, projet 2</title>
+    <meta name="description" content="Reservia est le projet N2 d'OC. Apprentisage HTML+CSS">
 
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" type="logo/svg" href="img/logo/Reservia.svg">
+    <script src="https://kit.fontawesome.com/8a96869c24.js" crossorigin="anonymous"></script> <!-- Connectons notre kit d'icons avec notre site --> 
+</head>
+
+<!-- La tete de notre page --> 
+<body>
+    <header class="header">
+        <a href="index.html" title="Reservia">
+            <img class="headLogo" src="img/logo/Reservia.svg" alt="Logo Reservia">
+        </a>
+<!-- Faisons la navigation de notre site --> 
+        <nav class="headNav">
+            <a class="headNavLink1" href="#ancreHousing">Hébergements</a>
+            <a class="headNavLink2" href="#ancreActivity">Activités</a>
+        </nav>
+        <a class="headSignup" href="#">S'inscrire</a>
+    </header>
+
+<!-- Le debut de page -->
+    <div class="title">
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <h2>En plein centre ville ou en pleine nature</h2>
+    </div>
+
+<!-- Creons la forme de recherche -->
+    <form method="get
+    " action="./" class="search_form">
+        <label for="search" class="marker">
+            <img src="img/logo/map-marker-alt-solid.svg" alt="marker">
+        </label>
+        <div class="place">
+            <input type="text" name="search" id="search" placeholder="Marseille, France">
+        </div>
+        <button type="submit" class="submit">
+            <span class="submit__submitTxt">Rechercher</span>
+            <img src="img/logo/search-solid.svg" class="searchLogo" alt="logo loupe">
+        </button>
+    </form>
+
+
+<!-- Ajoutons les filtres -->
+    <div class="filter">
+        <span>Filtres</span>
+        <a href="#" class="choice">
+            <div class="img">
+                <img src="img/logo/money-bill-wave-solid.svg" alt="logo billet">
+            </div>
+            <span>Économique</span>
+        </a>
+
+        <a href="#" class="choice">
+            <div class="img">
+                <img src="img/logo/child-solid.svg" alt="logo enfant">
+            </div>
+            <span>Familial</span>
+        </a>
+
+        <a href="#" class="choice">
+            <div class="img">
+                <img src="img/logo/heart-solid.svg" alt="logo coeur">
+            </div>
+            <span>Romantique</span>
+        </a>
+
+        <a href="#" class="choice">
+            <div class="img">
+                <img src="img/logo/dog-solid.svg" alt="logo Animaux">
+            </div>
+            <span>Animaux autorisés</span>
+        </a>
+    </div>
+
+<!-- Ecrivons le resultat de recherche nous-meme -->
+    <div class="info">
+        <div>
+            <img src="img/logo/info-solid.svg" alt="information">
+        </div>
+        <h4>Plus de 500 logements sont disponibles dans cette ville </h4>
+    </div>
+
+    <main class="main">
