--- a/index.html
+++ b/index.html
@@ -89,3 +89,197 @@
     </div>
 
     <main class="main">
+
+        <!-- SECTION 1  -->
+        <section class="housing">
+            <div class="housingTitle">
+                <h3 id="ancreHousing">Hébergements à Marseille</h3>
+            </div>
+  <!-- CARDS (FLEXBOX) -->
+            <div class="flex">
+    <!-- CARD N°1 -->
+                <div class="cards">
+                    <a href="#">
+                        <div>
+                            <span><img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" class="imgFlex"></span>
+                        </div>
+                        <div class="txt">
+                            <h5>Auberge la Cannebière</h5>
+                            <p>Nuit à partir de <strong>25 €</strong></p>
+                            <div class="star">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_grey.svg" alt="star grey">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                
+    <!-- CARD N°2 -->
+                <div class="cards">
+                    <a href="#">
+                        <span><img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photohotel5" class="imgFlex"></span>
+                        <div class="txt">
+                            <h5>Hôtel du port</h5>
+                            <p>Nuit à partir de <strong>52 €</strong></p>
+                            <div class="star">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+    <!-- CARD N°3 -->
+                <div class="cards">
+                    <a href="#">
+                        <span><img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photohotel6" class="imgFlex"></span>
+                        <div class="txt">
+                            <h5>Hôtel Les mouettes</h5>
+                            <p>Nuit à partir de <strong>76 €</strong></p>
+                            <div class="star">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_grey.svg" alt="star grey">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+    <!-- CARD N°4 -->
+                <div class="cards">
+                    <a href="#">
+                        <span><img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photohotel7" class="imgFlex"></span>
+                        <div class="txt">
+                            <h5>Hôtel de la mer</h5>
+                            <p>Nuit à partir de <strong>46 €</strong></p>
+                            <div class="star">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_grey.svg" alt="star grey">
+                                <img src="img/logo/star-solid_grey.svg" alt="star grey">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+    <!-- CARD N°5 -->
+                <div class="cards">
+                    <a href="#">
+                        <span><img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photohotel8" class="imgFlex"></span>
+                        <div class="txt">
+                            <h5>Auberge Le Panier</h5>
+                            <p>Nuit à partir de <strong>23 €</strong></p>
+                            <div class="star">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_grey.svg" alt="star grey">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+    <!-- CARD N°6 -->
+                <div class="cards">
+                    <a href="#">
+                        <span><img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photohotel9" class="imgFlex"></span>
+                        <div class="txt">
+                            <h5>Hôtel chez Amina</h5>
+                            <p>Nuit à partir de <strong>96 €</strong></p>
+                            <div class="star">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                                <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+<!-- Ajoutons bouton pour "afficher plus" des resultats -->
+            <div class="more">
+                <a href="#" class="viewMore">Afficher plus</a>
+            </div>
+        </section> <! -- Fermeture de notre SECTION avec 6 CARDS -->
+
+<!-- ASIDE va me rajouter un block(section) suplementaire à coté de SECTION N°1. Il va contenir 3 ELEMENTS.  -->
+        <aside class="pop">
+            <div class="popTitle">
+                <h3>Les plus populaires</h3>
+                <img src="img/logo/chart-line-solid.svg" alt="logopop">
+            </div>
+
+    <!-- ELEMENT N°1 -->
+            <div class="element">
+                <a href="">
+                    <div class="pic">
+                        <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photohotel1" class="imgFlex">
+                    </div>
+                    <div class="link">
+                        <h5>Hôtel Le soleil du matin</h5>
+                        <p>Nuit à partir de <strong>128 €</strong></p>
+                        <div class="star">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+    <!-- ELEMENT N°2 -->
+            <div class="element">
+                <a href="">
+                    <div class="pic">
+                        <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photohotel2" class="imgFlex">
+                    </div>
+                    <div class="link">
+                        <h5>Au cœur de l'eau Chambre d'hôtes</h5>
+                        <p>Nuit à partir de <strong>71 €</strong></p>
+                        <div class="star">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_grey.svg" alt="star grey">
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+    <!-- ELEMENT N°3 -->
+            <div class="element">
+                <a href="">
+                    <div class="pic">
+                        <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photohotel3" class="imgFlex">
+                    </div>
+                    <div class="link">
+                        <h5>Hôtel Tout bleu et Blanc</h5>
+                        <p>Nuit à partir de <strong>68 €</strong></p>
+                        <div class="star">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_blue.svg" alt="star blue">
+                            <img src="img/logo/star-solid_grey.svg" alt="star grey">
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </aside>    <!-- On ferme "ASIDE" qui est un block(section) supplementaire de notre page. Il contient 3 elements -->
+    </main>
