3 commit, dernier pour HTML

--- a/index.html
+++ b/index.html
@@ -283,3 +283,105 @@
             </div>
         </aside>    <!-- On ferme "ASIDE" qui est un block(section) supplementaire de notre page. Il contient 3 elements -->
     </main>
+
+    
+    <!-- Ajoutons la dernière section "Activités à Marseille" de notre page -->
+<section class="activity">
+    <h3 id="ancreActivity">Activités à Marseille</h3>
+
+    <div class="activityFlex">
+
+        <!-- "BP" ca veut dire "BigPicture" -->
+        <a href="#" class="bp">
+            <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port avec bateau, Marseille">
+            <p style="text-align:center">Vieux Port</p>
+        </a>
+
+<!-- La partie GAUCHE de notre Section "Activités à Marseille" (la moitié de page devisée en vertical) -->
+        <div class="activityLeft">
+
+            <!-- "MP" ca veut dire "MediumPicture"-->
+            <a href="#" class="mp">
+                <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomegues en pierre">
+                <p style="text-align:center">Fort de Pomègues</p>
+            </a>
+
+            <!-- "SM"ca veut dire "SmallPicture" -->
+            <a href="#" class="sp">
+                <img src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="le iles du frioul en arrière plan">
+                <p style="text-align:center">Îles du Frioul</p>
+            </a>
+        </div>
+
+        <!-- BP -->
+        <a href="#" class="bp">
+            <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Vue sur les calanques">
+            <p style="text-align:center">Parc National des Calanques</p>
+        </a>
+
+<!-- La partie DROITE de notre Section "Activités à Marseille" (la moitié de page devisée en vertical) -->
+        <div class="activityRight">
+
+            <!-- SP -->
+            <a href="#" class="sp">
+                <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde">
+                <p style="text-align:center">Notre-Dame-de-la-Garde</p>
+            </a>
+
+            <!-- MP -->
+            <a href="#" class="mp">
+                <img src="img/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamp">
+                <p style="text-align:center">Longchamp</p>
+            </a>
+        </div>
+    </div>
+</section> <!-- Fermons notre Section "Activités à Marseille" -->
+
+<!-- Commencons créer le FOOTER (bas de page) de notre site -->
+    <footer class="footer">
+        <div class="footerFlex">
+    <!-- ELEMENT N°1 -->
+            <div class="block">
+                <div class="title">
+                    <h3>A propos</h3>
+                </div>
+                <div class="child">
+                    <a href="#">Fonctionement du site</a>
+                </div>
+                <div class="child">
+                    <a href="#">Conditions générales de vente</a>
+                </div>
+                <div class="child">
+                    <a href="#">Données et confidentialité</a>
+                </div>
+            </div>
+
+    <!-- ELEMENT N°2 -->
+            <div class="block">
+                <div class="title">
+                    <h3>Nos hébergements</h3>
+                </div>
+                <div class="child">
+                    <a href="#">Charte qualité</a>
+                </div>
+                <div class="child">
+                    <a href="#">Soumettre votre hôtel</a>
+                </div>
+            </div>
+
+    <!-- ELEMENT N°3 -->
+            <div class="block">
+                <div class="title">
+                    <h3>Assistance</h3>
+                </div>
+                <div class="child">
+                    <a href="#">Centre d'aide</a>
+                </div>
+                <div class="child">
+                    <a href="#">Nous contarcter</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
