Correction-1 apres verification

--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <script src="https://kit.fontawesome.com/8a96869c24.js" crossorigin="anonymous"></script> <!-- Connectons notre kit d'icons avec notre site --> 
 </head>
 
-<!-- La tete de notre page --> 
+<!-- La tete de notre page - LOGO --> 
 <body>
     <header class="header">
-        <a href="index.html" title="Reservia">
-            <img class="headLogo" src="img/logo/Reservia.svg" alt="Logo Reservia">
-        </a>
+            <a href="index.html" title="Reservia"><img class="headLogo" src="img/logo/Reservia.svg" alt="Logo Reservia"></a>
+         
 <!-- Faisons la navigation de notre site --> 
         <nav class="headNav">
             <a class="headNavLink1" href="#ancreHousing">Hébergements</a>
             <a class="headNavLink2" href="#ancreActivity">Activités</a>
+            <a class="headSignup" href="#">S'inscrire </a>
         </nav>
-        <a class="headSignup" href="#">S'inscrire</a>
     </header>
 
 <!-- Le debut de page -->
@@ -33,16 +32,11 @@
     </div>
 
 <!-- Creons la forme de recherche -->
-    <form method="get
-    " action="./" class="search_form">
-        <label for="search" class="marker">
-            <img src="img/logo/map-marker-alt-solid.svg" alt="marker">
-        </label>
-        <div class="place">
-            <input type="text" name="search" id="search" placeholder="Marseille, France">
-        </div>
-        <button type="submit" class="submit">
-            <span class="submit__submitTxt">Rechercher</span>
+    <form method="get"action="./" class="search_form">
+        <label for="search" class="marker"><img src="img/logo/map-marker-alt-solid.svg" alt="marker"></label>
+        <div class="place"><input type="text" name="search" id="search" placeholder="Marseille, France"></div> 
+            <button type="submit" class="submit">
+                <span class="submit__submitTxt">Rechercher</span>
             <img src="img/logo/search-solid.svg" class="searchLogo" alt="logo loupe">
         </button>
     </form>
@@ -294,7 +288,7 @@
         <!-- "BP" ca veut dire "BigPicture" -->
         <a href="#" class="bp">
             <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port avec bateau, Marseille">
-            <p style="text-align:center">Vieux Port</p>
+            <p>Vieux Port</p>
         </a>
 
 <!-- La partie GAUCHE de notre Section "Activités à Marseille" (la moitié de page devisée en vertical) -->
@@ -303,20 +297,20 @@
             <!-- "MP" ca veut dire "MediumPicture"-->
             <a href="#" class="mp">
                 <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de pomegues en pierre">
-                <p style="text-align:center">Fort de Pomègues</p>
+                <p>Fort de Pomègues</p>
             </a>
 
             <!-- "SM"ca veut dire "SmallPicture" -->
             <a href="#" class="sp">
                 <img src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="le iles du frioul en arrière plan">
-                <p style="text-align:center">Îles du Frioul</p>
+                <p>Îles du Frioul</p>
             </a>
         </div>
 
         <!-- BP -->
         <a href="#" class="bp">
             <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Vue sur les calanques">
-            <p style="text-align:center">Parc National des Calanques</p>
+            <p>Parc National des Calanques</p>
         </a>
 
 <!-- La partie DROITE de notre Section "Activités à Marseille" (la moitié de page devisée en vertical) -->
@@ -325,13 +319,13 @@
             <!-- SP -->
             <a href="#" class="sp">
                 <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame de la garde">
-                <p style="text-align:center">Notre-Dame-de-la-Garde</p>
+                <p>Notre-Dame-de-la-Garde</p>
             </a>
 
             <!-- MP -->
             <a href="#" class="mp">
                 <img src="img/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc longchamp">
-                <p style="text-align:center">Longchamp</p>
+                <p>Longchamp</p>
             </a>
         </div>
     </div>
