mobile tablette versioning

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- SECTION 1  -->
         <section class="housing">
             <div class="housingTitle">
-                <h3 id="ancreHousing">Hébergements à Marseille</h3>
+                <h3 id="ancreHousing"> Hébergements à Marseille </h3>
             </div>
   <!-- CARDS (FLEXBOX) -->
             <div class="flex">
@@ -209,13 +209,12 @@
             </div>
         </section> <! -- Fermeture de notre SECTION avec 6 CARDS -->
 
-<!-- ASIDE va me rajouter un block(section) suplementaire à coté de SECTION N°1. Il va contenir 3 ELEMENTS.  -->
+<!-- ASIDE va m'aider de creer le titre de 2em block à coté .  -->
         <aside class="pop">
             <div class="popTitle">
                 <h3>Les plus populaires</h3>
                 <img src="img/logo/chart-line-solid.svg" alt="logopop">
             </div>
-
     <!-- ELEMENT N°1 -->
             <div class="element">
                 <a href="">
@@ -235,7 +234,6 @@
                     </div>
                 </a>
             </div>
-
     <!-- ELEMENT N°2 -->
             <div class="element">
                 <a href="">
@@ -255,7 +253,6 @@
                     </div>
                 </a>
             </div>
-
     <!-- ELEMENT N°3 -->
             <div class="element">
                 <a href="">
@@ -275,7 +272,7 @@
                     </div>
                 </a>
             </div>
-        </aside>    <!-- On ferme "ASIDE" qui est un block(section) supplementaire de notre page. Il contient 3 elements -->
+        </aside>    <!-- On ferme "ASIDE" -->
     </main>
 
     
