--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
         <p class="searchHeaderSubtitle">En plein centre de ville ou en pleine nature</p>
       </header>
 
-       <!--------------------------------------------------->
 
           <!-- FORMULAIRE de RECHERCHE -->
-    <form method="get
-    " action="./" class="search_form">
+    <form method="POST" action ="" class="search_form">
         <label for="search" class="marker">
             <img src="img/logo/map-marker-alt-solid.svg" alt="marker">
         </label>
@@ -45,7 +43,7 @@
             <img src="img/logo/search-solid.svg" class="searchLogo" alt="logo loupe">
         </button>
     </form>
-       <!--------------------------------------------------->
+     
 
 
       <!-- LES FILTRES -->
@@ -138,7 +136,7 @@
               <img 
                 class="hostingMainCardFigureImg"
                 src="img/hosting/small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-                alt="Chambre avec un lit superposé avec une fenêtre vu sur la ville.>
+                alt="Chambre avec un lit superposé avec une fenêtre vu sur la ville.">
               <figcaption class="hostingMainCardFigureCaption">
                 <h3 class="hostingMainCardFigureCaptionTitle">Hôtel Les mouettes</h3>
               </figcaption>
