--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
           <!-- FORMULAIRE de RECHERCHE -->
-    <form method="POST" action ="" class="search_form">
+    <form method="POST" class="search_form">
         <label for="search" class="marker">
             <img src="img/logo/map-marker-alt-solid.svg" alt="marker">
         </label>
