--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     
 
     <!-- HOSTING - LES CARDS "d'HEBERGEMENT à MARSEILLE" -->
+  
     <section class="hosting" id="hosting">
       <div class="hostingMain">
         <header class="hostingMainHeader">
@@ -218,7 +219,7 @@
       </div>
 
       <aside class="hostingPopular">
-        <h2 class="hostingPopularTitle">Les plus populaire <i class="fas fa-chart-line"></i></h2>
+        <h2 class="hostingPopularTitle">Les plus populaires <i class="fas fa-chart-line"></i></h2>
         <article class="hostingMainCard hostingPopularCard">
           <a class="hostingPopularWrapcontent" href="index.html#">
             <div class="hostingPopularWrapcontentWrapimg">
