--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservia - Openclassroom</title>
-  <link rel="stylesheet" href="index/normalize.css">
-  <link rel="stylesheet" href="index/index.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/index.css">
   <script src="https://kit.fontawesome.com/406da18a0b.js" crossorigin="anonymous" defer ></script>
 </head>
 <body>
@@ -82,7 +82,6 @@
     
 
     <!-- HOSTING - LES CARDS "d'HEBERGEMENT à MARSEILLE" -->
-  
     <section class="hosting" id="hosting">
       <div class="hostingMain">
         <header class="hostingMainHeader">
@@ -219,7 +218,7 @@
       </div>
 
       <aside class="hostingPopular">
-        <h2 class="hostingPopularTitle">Les plus populaires <i class="fas fa-chart-line"></i></h2>
+        <h2 class="hostingPopularTitle">Les plus populaire <i class="fas fa-chart-line"></i></h2>
         <article class="hostingMainCard hostingPopularCard">
           <a class="hostingPopularWrapcontent" href="index.html#">
             <div class="hostingPopularWrapcontentWrapimg">
