LA FIN DE LA FIN -7

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
 
       <aside class="hostingPopular">
-        <h2 class="hostingPopularTitle">Les plus populaire <i class="fas fa-chart-line"></i></h2>
+        <h2 class="hostingPopularTitle">Les plus populaires <i class="fas fa-chart-line"></i></h2>
         <article class="hostingMainCard hostingPopularCard">
           <a class="hostingPopularWrapcontent" href="index.html#">
             <div class="hostingPopularWrapcontentWrapimg">
